# AdventOfCode

./: adventofcode.cabal  readme.md  runcabal.ps1
aoc2023/: day0_p1.b98  day0_p2.b98  day10_p1.b98  day10_p2.b98  day11_p1.b98  day11_p2.b98  day12_p1.b98  day12_p2.b98  day1_p1.bf  day1_p2.bf  day2_p1.b98  day2_p2.b98  day3_p1.b98  day3_p2.b98  day4_p1.b98  day4_p2.b98  day5_p1.b98  day5_p2.b98  day6_p1.b98  day6_p2.b98  day7_p1.b98  day7_p2.b98  day8_p1.b98  day8_p2.b98  day9_p1.b98  day9_p2.b98  instructions.md  main.py
aoc2023/data/: example.txt
aoc2024/: Main.hs  _day4.py  _day5.py  _day6.py  day1.hs  day2.hs  day3.hs  day4.hs  day5.hs  day6.hs  runghc.ps1
